# .swagger/swagger.yaml
@@ -128,6 +128,24 @@ paths:
           description: An unexpected error response.
           schema:
             $ref: '#/definitions/gatewayruntimeError'
+  /project/list:
+    get:
+      tags:
+      - ProjectOps
+      summary: list all visible projects.
+      operationId: ProjectOps_List
+      responses:
+        "200":
+          description: A successful response.
+          schema:
+            type: object
+            properties:
+              error:
+                $ref: '#/definitions/modelError'
+              projects:
+                type: array
+                items:
+                  type: string
   /project/service:
     post:
       tags:
