# restapi/operations/project_ops/project_ops_list_responses.go
@@ -1,0 +1,56 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package project_ops
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+)
+
+// ProjectOpsListOKCode is the HTTP code returned for type ProjectOpsListOK
+const ProjectOpsListOKCode int = 200
+
+/*ProjectOpsListOK A successful response.
+
+swagger:response projectOpsListOK
+*/
+type ProjectOpsListOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *ProjectOpsListOKBody `json:"body,omitempty"`
+}
+
+// NewProjectOpsListOK creates ProjectOpsListOK with default headers values
+func NewProjectOpsListOK() *ProjectOpsListOK {
+
+	return &ProjectOpsListOK{}
+}
+
+// WithPayload adds the payload to the project ops list o k response
+func (o *ProjectOpsListOK) WithPayload(payload *ProjectOpsListOKBody) *ProjectOpsListOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the project ops list o k response
+func (o *ProjectOpsListOK) SetPayload(payload *ProjectOpsListOKBody) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *ProjectOpsListOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
